[gd_scene load_steps=3 format=3 uid="uid://d4f0gy2sw12hv"]

[ext_resource type="Script" uid="uid://dayll084jybxg" path="res://scripts/end_screen.gd" id="1_iqvlg"]
[ext_resource type="Theme" uid="uid://cchp864k50mvc" path="res://ui_theme.tres" id="1_n8r4t"]

[node name="EndScreen" type="Control"]
z_index = 2
texture_filter = 1
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 600.0
offset_top = 43.0
offset_right = 640.0
offset_bottom = 83.0
grow_horizontal = 2
pivot_offset = Vector2(20, 0)
theme = ExtResource("1_n8r4t")
script = ExtResource("1_iqvlg")

[node name="LoseScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -295.0
offset_top = 5.0
offset_right = 295.0
offset_bottom = 395.0

[node name="MarginContainer" type="MarginContainer" parent="LoseScreen"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="LoseScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="LoseScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BATTLE_DEFEAT"
horizontal_alignment = 1

[node name="ReloadButton" type="Button" parent="LoseScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BATTLE_RELOAD"

[node name="WinScreen" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -300.0
offset_right = 300.0
offset_bottom = 400.0
pivot_offset = Vector2(300, 0)

[node name="MarginContainer" type="MarginContainer" parent="WinScreen"]
layout_mode = 2
theme = ExtResource("1_n8r4t")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="WinScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BATTLE_VICTORY"
horizontal_alignment = 1

[node name="CharactersLevelup" type="VBoxContainer" parent="WinScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LeaveButton" type="Button" parent="WinScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BATTLE_RETURN_TO_MAP"

[connection signal="pressed" from="LoseScreen/MarginContainer/VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="WinScreen/MarginContainer/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
